--- a/style.css
+++ b/style.css
@@ -4,23 +4,51 @@
     box-sizing: border-box;
 }
 
+/*
 body {
-    background-color: #3498db; /* Set blue background color for the body */
-    display: flex;
+    background: linear-gradient(to right, red, rgb(43, 43, 39));
+
+   background-color: #4a84d6; 
+     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     font-family: Arial, sans-serif;
     color: #fff;
 }
+*/
+body{
+background-image: url('social.jpg');
+background-size:2100px; /* Ensure the image covers the entire background */
+background-position: center; /* Center the image */
+background-repeat: no-repeat; /* Prevent the image from repeating */
+width: 400;
+height: 400;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+font-family: Arial, sans-serif;
+color: #fff;
+}
+.dev{
 
+    border: solid 3px;
+    color: #25D366;
+    margin-top: 50px;
+   
+}
+
+.dev:hover{
+    color: #E4405F;
+}
 .container {
     text-align: center;
     padding: 20px;
-    background-color: rgba(29, 52, 79, 0.9); /* Semi-transparent white background for the container */
+    background-color: rgba(29, 52, 79, 0.9); 
     border-radius: 10px;
-    max-width: 600px; /* Limit the width of the container */
-    box-shadow: 0 4px 8px rgba(79, 2, 233, 0.1); /* Soft shadow effect */
+    max-width: 600px; 
+    box-shadow: 0 4px 8px rgba(79, 2, 233, 0.1); 
 }
 
 h1 {
@@ -36,7 +64,7 @@ h1 {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    background: rgba(19, 107, 127, 0.7); /* Semi-transparent white background for the icons area */
+    background: rgba(19, 107, 127, 0.7); 
     padding: 20px;
     border-radius: 10px;
 }
@@ -61,7 +89,7 @@ h1 {
     height: 120px;
     cursor: pointer;
     color: #fff;
-    background: #2980b9; /* Darker blue on hover */
+    background: #2980b9; 
     box-shadow: 5px 10px 20px rgba(150, 150, 150, 0.5);
 }
 
@@ -94,11 +122,11 @@ h1 {
 }
 
 .icon .fa-tiktok {
-    color: #69C9D0;
+    color: #121212;
 }
 
 .tt:hover {
-    background: #69C9D0;
+    background: #030303;
 }
 
 .icon .fa-github {
@@ -110,11 +138,11 @@ h1 {
 }
 
 .icon .fa-whatsapp {
-    color: #25D366; /* WhatsApp green color */
+    color: #25D366; 
 }
 
 .wa:hover {
-    background: #25D366; /* WhatsApp green color on hover */
+    background: #25D366; 
 }
 
 /* responsive */
@@ -123,3 +151,4 @@ h1 {
         flex-direction: column;
     }
 }
+
